<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_food_menu"
            android:icon="@drawable/ic_menu_foodmenu"
            android:title="@string/menu_foodMenu" />

        <item
            android:id="@+id/nav_coffeeshops"
            android:icon="@drawable/ic_menu_coffeshops"
            android:title="@string/menu_coffeeshops" />

        <item
            android:id="@+id/nav_aboutUs"
            android:icon="@drawable/ic_menu_aboutus"
            android:title="@string/menu_aboutUs" />

        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/ic_menu_contacts"
            android:title="@string/menu_contacts" />
    </group>

</menu>
