<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".AboutUs_Fragment"
    android:orientation="vertical">
    <TextView
        android:id="@+id/piece1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/aboutUs_1"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/founder_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@mipmap/cofix_founder" />

    <TextView
        android:id="@+id/piece2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="0dp"
        android:text="@string/aboutUs_2"
        android:textSize="20sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/piece2_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/aboutUs_2_2"
        android:textSize="20sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/piece3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/aboutUs_3"
        android:textSize="20sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/piece4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/aboutUs_4"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/piece4_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/aboutUs_4_2"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/piece4_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/aboutUs_4_3"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/piece4_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/aboutUs_4_4"
        android:textSize="20sp" />
</LinearLayout>
</ScrollView>