<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Contacts_Fragment">

    <TextView
        android:id="@+id/contacts_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contacts_1"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:textSize="25sp"
        android:layout_centerHorizontal="true"/>

    <ImageView
        android:id="@+id/email_icon"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:src="@mipmap/email_icon"
        android:layout_below="@id/contacts_1"
        />

    <TextView
        android:id="@+id/email"
        android:layout_toRightOf="@id/email_icon"
        android:layout_toEndOf="@id/email_icon"
        android:layout_below="@id/contacts_1"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:text="@string/contacts_email"
        android:textSize="35sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp" />

    <ImageView
        android:id="@+id/contacts_icon"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:src="@mipmap/contacts_icon"
        android:layout_below="@id/email_icon"
        />

    <TextView
        android:id="@+id/phone"
        android:layout_below="@id/email"
        android:layout_toRightOf="@id/contacts_icon"
        android:layout_toEndOf="@id/contacts_icon"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:text="@string/contacts_phone"
        android:textSize="35sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"/>

</RelativeLayout>